--- a/tin-dog/css/styles.css
+++ b/tin-dog/css/styles.css
@@ -1,14 +1,56 @@
-h1 {  
-    font-family: 'Montserrat, sans-serif';  
-    font-size: 3rem;  
-    line-height: 1.5;  
-    font-weight: 900;
-    }
+body {
+    font-family: 'Montserrat';
+}
 
 #title {
     background-color: #ff4c68;
+    color: #fff;
 }
 
 .container-fluid {
     padding: 3% 15%;
+}
+
+h1 {
+    font-family: 'Montserrat, sans-serif';
+    font-size: 4.5rem;
+    line-height: 1.5;
+    font-weight: 900;
+}
+
+
+/* Navigation Bar */
+
+.navbar {
+    padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+    font-family: "Ubuntu";
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.nav-item {
+    padding: 0 18px;
+}
+
+.nav-link {
+    font-size: 1.3rem;
+    font-family: "Montserrat-Light";
+}
+
+
+/* download buttons */
+
+.download-button {
+    margin: 5% 3% 5% 0;
+}
+
+
+/* title image */
+
+.title-image {
+    width: 60%;
+    transform: rotate(25deg)
 }
