--- a/upgraded blog/templates/contact.html
+++ b/upgraded blog/templates/contact.html
@@ -26,7 +26,7 @@
                     <!-- To make this form functional, sign up at-->
                     <!-- https://startbootstrap.com/solution/contact-forms-->
                     <!-- to get an API token!-->
-                    <form action="{{ url_for('receive_data') }}" method="post" id="contactForm" data-sb-form-api-token="API_TOKEN">
+                    <form action="{{ url_for('contact') }}" method="post" id="contactForm" data-sb-form-api-token="API_TOKEN">
                         <div class="form-floating">
                             <input name="username" class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
                             <label for="name">Name</label>
