--- a/library-start/templates/index.html
+++ b/library-start/templates/index.html
@@ -8,6 +8,9 @@
 
 <body>
     <h1>My Library</h1>
+    {% if books == []: %}
+    <p>Library is empty.</p>
+    {% endif %}
     <ul>
         {% for book in books %}
         <li>{{book.title}} - {{book.author}} - {{book.rating}}/10</li>
