--- a/library-start/templates/index.html
+++ b/library-start/templates/index.html
@@ -13,7 +13,7 @@
     {% endif %}
     <ul>
         {% for book in books %}
-        <li>{{book.title}} - {{book.author}} - {{book.rating}}/10 <a href="{{ url_for('edit', book_id=book.id)}}">Edit</a></li> {% endfor %}
+        <li><a href="{{ url_for('delete', book_id=book.id)}}">Delete</a>{{book.title}} - {{book.author}} - {{book.rating}}/10 <a href="{{ url_for('edit', book_id=book.id)}}">Edit</a></li> {% endfor %}
     </ul>
 
     <a href="{{ url_for('add') }}">Add New Book</a>
