--- a/movie-project/templates/index.html
+++ b/movie-project/templates/index.html
@@ -33,7 +33,7 @@
 </div>
 {% endfor %}
 <div class="container text-center add">
-    <a href="#" class="button">Add Movie</a>
+    <a href="{{ url_for('add')}}" class="button">Add Movie</a>
 </div>
 
 {% endblock %}
