--- a/restful-blog/templates/make-post.html
+++ b/restful-blog/templates/make-post.html
@@ -1,31 +1,27 @@
-{% extends 'bootstrap/base.html' %}
-
-{% block content %}
-{% include "header.html" %}
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/edit-bg.jpg')}}')">
+{% extends 'bootstrap/base.html' %} {% import "bootstrap/wtf.html" as wtf %} {% block styles %} {{ super() }} {% block content %} {% include "header.html" %}
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('{{ url_for('static', filename='img/edit-bg.jpg')}}')">
     <div class="overlay"></div>
     <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1>New Post</h1>
-            <span class="subheading">You're going to make a great blog post!</span>
-          </div>
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="page-heading">
+                    <h1>New Post</h1>
+                    <span class="subheading">You're going to make a great blog post!</span>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </header>
+</header>
 
-  <div class="container">
+<div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        
-          <!-- This is where the form will go -->
+        <div class="col-lg-8 col-md-10 mx-auto">
 
-      </div>
+            <!-- This is where the form will go -->
+            {{ wtf.quick_form(form, novalidate=True) }}
+        </div>
     </div>
-  </div>
+</div>
 
-{% include "footer.html" %}
-{% endblock %}
+{% include "footer.html" %} {% endblock %}{% endblock %}
