ckeditor field added

--- a/restful-blog/templates/make-post.html
+++ b/restful-blog/templates/make-post.html
@@ -17,7 +17,11 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
+            <!-- #Load ckeditor -->
+            {{ ckeditor.load() }}
 
+            <!-- #Configure the ckeditor to tell it which field in WTForm will need to be a CKEditor. -->
+            {{ ckeditor.config(name='body') }}
             <!-- This is where the form will go -->
             {{ wtf.quick_form(form, novalidate=True) }}
         </div>
