--- a/blog-with-users-start/templates/post.html
+++ b/blog-with-users-start/templates/post.html
@@ -1,4 +1,4 @@
-{% include "header.html" %}
+{% include "header.html" %} {% import "bootstrap/wtf.html" as wtf %}
 
 <!-- Page Header -->
 <header class="masthead" style="background-image: url('{{post.img_url}}')">
@@ -34,6 +34,7 @@
 
 
                 <!--           Comments Area -->
+                {{ ckeditor.load() }} {{ ckeditor.config(name='comment') }} {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
                 <div class="col-lg-8 col-md-10 mx-auto comment">
                     <ul class="commentList">
                         <li>
@@ -41,9 +42,7 @@
                                 <img src="https://pbs.twimg.com/profile_images/744849215675838464/IH0FNIXk.jpg" />
                             </div>
                             <div class="commentText">
-                                <div class="col-lg-8 col-md-10 mx-auto">
-                                    {{ ckeditor.load() }} {{ ckeditor.config(name='comment') }} {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
-                                </div>
+                                <p>Some comment</p>
                                 <span class="date sub-text">comment author name</span>
                             </div>
                         </li>
