--- a/blog-with-users-start/templates/post.html
+++ b/blog-with-users-start/templates/post.html
@@ -40,7 +40,7 @@
                         {% for comment in post.comments %}
                         <li>
                             <div class="commenterImage">
-                                <img src="https://pbs.twimg.com/profile_images/744849215675838464/IH0FNIXk.jpg" />
+                                <img src="{{ comment.comment_author.email|gravatar}}" />
                             </div>
                             <div class="commentText">
 
