--- a/blog_proj/templates/index.html
+++ b/blog_proj/templates/index.html
@@ -1,27 +1,47 @@
-{% extends "bootstrap/base.html" %} 
-<!DOCTYPE html>
-<html lang="en">
+{% include "header.html" %}
 
-<head>
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1470092306007-055b6797ca72?ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80')">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="site-heading">
+                    <h1>Angela's Blog</h1>
+                    <span class="subheading">A collection of random musings.</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<!-- Main Content -->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+            {% for post in all_posts %}
+            <div class="post-preview">
+                <a href="{{ url_for('show_post', post_id=post.id) }}">
+                    <h2 class="post-title">
+                        {{post.title}}
+                    </h2>
+                    <h3 class="post-subtitle">
+                        {{post.subtitle}}
+                    </h3>
+                </a>
+                <p class="post-meta">Posted by
+                    
+                </p>
+            </div>
+            <hr> {% endfor %}
 
-    <title>Mine Blog</title>
-{% block styles %} 
 
-    <!-- Bootstrap core CSS -->
-    <link href="{{bootstrap_find_resource('css/bootstrap.css', cdn='bootstrap')}}" rel="stylesheet">
-
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
- 
-{% endblock %} 
-
-    {% block content %} 
-        Hello 
-    {% endblock %} 
-{% block scripts%} 
-{% endblock%}
+            <!-- New Post -->
+            <div class="clearfix">
+                <!-- 
+                <a class="btn btn-primary float-right" href="{{url_for('add_new_post')}}">Create New Post</a> -->
+            </div>
+        </div>
+    </div>
+</div>
+<hr> {% include "footer.html" %}
