--- a/blog_proj/templates/schmindex.html
+++ b/blog_proj/templates/schmindex.html
@@ -36,7 +36,7 @@
                         <a href="{{ url_for('show_post', post_id=post.id) }}"><img class="card-img-top"
                                 src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                         <div class="card-body">
-                            <div class="small text-muted">January 1, 2021</div>
+                            <div class="small text-muted">Posted on {{post.date}}</div>
                             <h2 class="card-title h4">{{post.title}}</h2>
                             <p class="card-text">{{post.subtitle}}.</p>
                             <a class="btn btn-primary" href="{{ url_for('show_post', post_id=post.id) }}">Read
