--- a/blog_proj/templates/post-second.html
+++ b/blog_proj/templates/post-second.html
@@ -1,4 +1,5 @@
 {% include "header1.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
         <!-- Page content-->
         <div class="container mt-5">
             <div class="row">
@@ -25,44 +26,36 @@
                         </section>
                     </article>
                     <!-- Comments section-->
+                    
+                    
                     <section class="mb-5">
                         <div class="card bg-light">
                             <div class="card-body">
                                 <!-- Comment form-->
-                                <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
+                                <div class="mb-4">
+                                    {{ ckeditor.load() }} 
+                                    {{ ckeditor.config(name='comment') }}
+                                    {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+                                </div>
                                 <!-- Comment with nested comments-->
                                 <div class="d-flex mb-4">
-                                    <!-- Parent comment-->
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                    <div class="ms-3">
-                                        <div class="fw-bold">Commenter Name</div>
-                                        If you're going to lead a space frontier, it has to be government; it'll never be private enterprise. Because the space frontier is dangerous, and it's expensive, and it has unquantified risks.
-                                        <!-- Child comment 1-->
-                                        <div class="d-flex mt-4">
-                                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                            <div class="ms-3">
-                                                <div class="fw-bold">Commenter Name</div>
-                                                And under those conditions, you cannot establish a capital-market evaluation of that enterprise. You can't get investors.
+                                    <ul>
+                                        {% for comment in post.comments %}
+                                        <li>
+                                            <div class="flex-shrink-0">
+                                                <img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." />
                                             </div>
-                                        </div>
-                                        <!-- Child comment 2-->
-                                        <div class="d-flex mt-4">
-                                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                            
                                             <div class="ms-3">
-                                                <div class="fw-bold">Commenter Name</div>
-                                                When you put money directly to a problem, it makes a good headline.
+                                                <div class="fw-bold">{{comment.comment_author.name}}</div>
+                                                <p>{{comment.text|safe}}</p>
+                                                
                                             </div>
-                                        </div>
-                                    </div>
+                                        </li>
+                                        {% endfor%}
+                                    </ul>
                                 </div>
-                                <!-- Single comment-->
-                                <div class="d-flex">
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                    <div class="ms-3">
-                                        <div class="fw-bold">Commenter Name</div>
-                                        When I look at the universe and all the ways the universe wants to kill us, I find it hard to reconcile that with statements of beneficence.
-                                    </div>
-                                </div>
+                                
                             </div>
                         </div>
                     </section>
