--- a/blog_proj/templates/make-post.html
+++ b/blog_proj/templates/make-post.html
@@ -1,7 +1,7 @@
 {% extends 'bootstrap/base.html' %} 
 {% import "bootstrap/wtf.html" as wtf %} 
 {% block content %} 
-{% include "header.html" %}
+{% include "header1.html" %}
 <!-- Page Header -->
 <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/edit-bg.jpg')}}')">
     <div class="overlay"></div>
@@ -31,5 +31,5 @@
     </div>
 </div>
 
-{% include "footer.html" %} 
+{% include "footer1.html" %} 
 {% endblock %}
