--- a/blog_proj/templates/header1.html
+++ b/blog_proj/templates/header1.html
@@ -15,7 +15,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="{{url_for('get_all_posts')}}">Larisa's Blog</a>
+                <a class="navbar-brand" href="{{url_for('get_all_posts', page_num=1)}}">Larisa's Blog</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -23,21 +23,25 @@
                         <!-- <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li> -->
 
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('get_all_posts') }}">Home</a>
+                            <a class="nav-link" href="{{ url_for('get_all_posts', page_num=1) }}">Home</a>
                         </li>
-                        
+                        {% if not current_user.is_authenticated: %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('register') }}">Register</a>
                         </li>
-                        
+                        {% else: %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
                         </li>
-                        
-    
+                        {% endif %}
+                        {% if current_user.id == 2: %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('add_new_post') }}">New Post</a>
+                        </li>
+                        {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('about') }}">About</a>
                         </li>
