--- a/blog_proj/templates/schmindex.html
+++ b/blog_proj/templates/schmindex.html
@@ -29,7 +29,7 @@
             <!-- Nested row for non-featured blog posts-->
             <div class="row">
                 
-                {% for post in all_posts %}
+                {% for post in all_posts.items %}
                 <!-- Blog post-->
                 <div class="col-6">
                     <div class="card mb-4">
@@ -52,13 +52,18 @@
                     <nav aria-label="Pagination">
                         <hr class="my-0" />
                         <ul class="pagination justify-content-center my-4">
-                            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-                            <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                            <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+                            
+                            {% for page in all_posts.iter_pages(left_edge=2, right_edge=2, left_current=2, right_current=2) %}
+                                {% if page %}
+                                <li class="page-item">
+                                    <a href="{{ url_for('get_all_posts', page_num=page)}}">{{ page }}</a>
+                                </li>
+                                {% else %}
+                                ...
+                                {% endif %}
+                  
+                            {% endfor %}
+
                         </ul>
                     </nav>
                 </div>
