--- a/blog_proj/templates/schmindex.html
+++ b/blog_proj/templates/schmindex.html
@@ -13,19 +13,7 @@
     <div class="row">
         <!-- Blog entries-->
         <div class="col-lg-8">
-            <!-- Featured blog post-->
-            <div class="card mb-4">
-                <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg"
-                        alt="..." /></a>
-                <div class="card-body">
-                    <div class="small text-muted">January 1, 2021</div>
-                    <h2 class="card-title">Featured Post Title</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid
-                        atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero
-                        voluptate voluptatibus possimus, veniam magni quis!</p>
-                    <a class="btn btn-primary" href="#!">Read more →</a>
-                </div>
-            </div>
+            
             <!-- Nested row for non-featured blog posts-->
             <div class="row">
                 
@@ -36,7 +24,7 @@
                         <a href="{{ url_for('show_post', post_id=post.id) }}"><img class="card-img-top"
                                 src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                         <div class="card-body">
-                            <div class="small text-muted">Posted on {{post.date}}</div>
+                            <div class="small text-muted">Posted on {{post.date}} in {{post.categorie.categorie}}</div>
                             <h2 class="card-title h4">{{post.title}}</h2>
                             <p class="card-text">{{post.subtitle}}.</p>
                             <a class="btn btn-primary" href="{{ url_for('show_post', post_id=post.id) }}">Read
@@ -50,16 +38,19 @@
                 <div class="col-12">
                     <!-- Pagination-->
                     <nav aria-label="Pagination">
+
+                   
+
                         <hr class="my-0" />
                         <ul class="pagination justify-content-center my-4">
                             
                             {% for page in all_posts.iter_pages(left_edge=2, right_edge=2, left_current=2, right_current=2) %}
                                 {% if page %}
                                 <li class="page-item">
-                                    <a href="{{ url_for('get_all_posts', page_num=page)}}">{{ page }}</a>
+                                    <a class="page-link" href="{{ url_for('get_all_posts', page_num=page)}}">{{ page }}</a>
                                 </li>
                                 {% else %}
-                                ...
+                                <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
                                 {% endif %}
                   
                             {% endfor %}
@@ -73,17 +64,7 @@
 
         <!-- Side widgets-->
         <div class="col-lg-4">
-            <!-- Search widget-->
-            <div class="card mb-4">
-                <div class="card-header">Search</div>
-                <div class="card-body">
-                    <div class="input-group">
-                        <input class="form-control" type="text" placeholder="Enter search term..."
-                            aria-label="Enter search term..." aria-describedby="button-search" />
-                        <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                    </div>
-                </div>
-            </div>
+           
             <!-- Categories widget-->
             <div class="card mb-4">
                 <div class="card-header">Categories</div>
@@ -91,28 +72,22 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <ul class="list-unstyled mb-0">
-                                <li><a href="#!">Web Design</a></li>
-                                <li><a href="#!">HTML</a></li>
-                                <li><a href="#!">Freebies</a></li>
+                                {% for categorie in categories%}
+                                <li><a href="{{url_for('show_posts_in_cat', categorie=categorie.categorie)}}">{{ categorie.categorie }}</a></li>
+                                {% endfor%}
                             </ul>
                         </div>
                         <div class="col-sm-6">
                             <ul class="list-unstyled mb-0">
-                                <li><a href="#!">JavaScript</a></li>
-                                <li><a href="#!">CSS</a></li>
+                                <li><a href="#!">Dumb Ass</a></li>
+                                <li><a href="#!">Dumb Dumb</a></li>
                                 <li><a href="#!">Tutorials</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- Side widget-->
-            <div class="card mb-4">
-                <div class="card-header">Side Widget</div>
-                <div class="card-body">You can put anything you want inside of these side widgets. They are easy
-                    to
-                    use, and feature the Bootstrap 5 card component!</div>
-            </div>
+           
         </div>
     </div>
     {% include "footer1.html" %}
